Remove redundant props, fix vertical position on mobile

--- a/app.css
+++ b/app.css
@@ -113,12 +113,9 @@ html, body, #cube {
     #cube > header > img {
         height: 100vh;
         width: auto;
-        animation: colorchange 10s infinite;
-        animation-timing-function: linear;
     }
     #cube > header > div {
-        top: auto;
-        bottom: 14em;
+        top: calc(100%/1.9);
     }
     #cube > header > div > h1 {
         font-size: 3em;
